# chessforge

./: DEEP_DIVE.txt  README.md  pyproject.toml
benchmarks/: baseline.csv  baseline.json  post_evolution.csv  post_evolution.json
chessforge/: __init__.py  attacks.py  benchmark.py  bitboards.py  cli.py  constants.py  core.py  evaluation.py  experiments.py  metrics.py  ml.py  move.py  research.py  search.py  tactics.py  uci.py  visualization.py
docs/: ARCHITECTURE.md  EVALUATION.md  RESEARCH_PLATFORM.md  SEARCH.md
examples/: .git.code-workspace  ai_vs_ai.py  sample_ai_vs_ai.txt
tests/: test_attacks.py  test_benchmark.py  test_bitboards.py  test_evaluation.py  test_experiments.py  test_fuzz.py  test_ml.py  test_perft.py  test_research_cli.py  test_rules.py  test_search.py  test_visualization.py
