[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chessforge"
version = "0.1.0"
description = "A from-scratch chess rules engine, search engine, CLI, and UCI interface."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ChessForge" }]
license = { text = "ibnshafi" }

[project.scripts]
chessforge = "chessforge.cli:main"
chessforge-uci = "chessforge.uci:main"
chessforge-bench = "chessforge.benchmark:main"
chessforge-research = "chessforge.research:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chessforge*"]
